--- a/locations/templates/locations/locations_index_page.html
+++ b/locations/templates/locations/locations_index_page.html
@@ -5,6 +5,12 @@
 {% block body_class %}template-locationsindexpage{% endblock %}
 
 {% block content %}
+<div class="page-content-shown">
+<!-- one of the templates will get rendered here depending on what the client device is -->
+
+</div>
+<template id='mobile-content'>
+
 
 
 
@@ -12,7 +18,6 @@
     <div class="content-title-holder">
        <h2 class="ml-4">Promotions</h2>
 	<!-- replace w/ static file later -->
-       <img class="svg-special-label mr-4 mb-2" src="https://svgshare.com/i/TJu.svg"/>
     </div>
     {% if page.promoted_pages.count %}
     <div class="swiper-promotions-container mt-4 anm fdu">
@@ -53,7 +58,6 @@
     <div class="content-title-holder">
         <h2 class="ml-4">Near Me</h2>
 	<!-- replace w/ static file later -->
-        <img class="svg-special-label mr-4 mb-2" src="https://svgshare.com/i/TL9.svg"/>
     </div>
     <div class="swiper-container">
         <div class="swiper-wrapper">
@@ -65,50 +69,115 @@
     </div>
 
     {% endif %}
+
+
+
+</template>
+
+<template id='desktop-content'>
+
+    
+    <div class="content-title-holder">
+       <h2 class="ml-4 mt-4">Promotions</h2>
+	<!-- replace w/ static file later -->
+    </div>
+    {% if page.promoted_pages.count %}
+    <div class="swiper-promotions-desktop mt-5">
+
+        <div class="swiper-wrapper"> 
+            {% for i,p in indexed_promoted_pages %}
+                {% with p.promoted_page.specific as promoted_page %}	
+		    {% include "promotions-carousel.html" with page=promoted_page %}
+                {% endwith %}
+            {% endfor %}
+            
+        </div>
+        <div class="swiper-pagination"></div>
+    </div>
+
+   {% endif %}
+</template>
+
     
     <script>
 
-    var generalSwiper = new Swiper('.swiper-container', {
-        slidesPerView: 2,
-        spaceBetween: 2,
-	centerInsufficientSlides: true,
-	loop: true,
-	effect: 'coverflow',
-	coverflowEffect: {
-        rotate: 50,
-        stretch: 0,
-        depth: 100,
-        modifier: 1,
-        slideShadows: false,
-      },
-        pagination: {
+    var pageContentShown = document.querySelector(".page-content-shown");
+    
+    const isMobile = matchMedia('(max-device-width: 844px)').matches;
+    if(isMobile === true) {
+        var mobileTemplate = document.querySelector("#mobile-content");
+        var clone = mobileTemplate.content.cloneNode(true);
+        pageContentShown.appendChild(clone);
         
+        var generalSwiper = new Swiper('.swiper-container', {
+            slidesPerView: 2,
+            spaceBetween: 2,
+            centerInsufficientSlides: true,
+            loop: true,
+            effect: 'coverflow',
+            coverflowEffect: {
+            rotate: 50,
+            stretch: 0,
+            depth: 100,
+            modifier: 1,
+            slideShadows: false,
+          },
+            pagination: {
+            
+                el: '.swiper-pagination',
+                clickable: true,
+            }
+        });
+        
+        var promotionsSwiper = new Swiper('.swiper-promotions-container', {
+            slidesPerView: 1,
+            spaceBetween: 2,
+            effect: 'coverflow',
+            coverflowEffect: {
+            rotate: 50,
+            stretch: 0,
+            depth: 100,
+            modifier: 1,
+            autoplay: {delay: 2},
+            slideShadows: false,
+          },
+            pagination: {
+            
+                el: '.swiper-pagination',
+                clickable: true,
+            }
+        
+        
+        
+        });
+    } else {
+            
+        var desktopTemplate = document.querySelector("#desktop-content");
+        var clone = desktopTemplate.content.cloneNode(true);
+        pageContentShown.appendChild(clone);
+        /*
+        var generalSwiper = new Swiper('.swiper-container', {
+            slidesPerView: 4,
+            spaceBetween: 5,
+            centerInsufficientSlides: true,
+            pagination: {
+            
+                el: '.swiper-pagination',
+                clickable: true,
+            }
+        });
+        */ 
+       var promotionsSwiper = new Swiper('.swiper-promotions-desktop', {
+          slidesPerView: 3,
+          slidesPerColumn: 1,
+          spaceBetween: 15,
+          pagination: {
             el: '.swiper-pagination',
             clickable: true,
-        }
-    });
+          },
+        }); 
 
-    var promotionsSwiper = new Swiper('.swiper-promotions-container', {
-        slidesPerView: 1,
-        spaceBetween: 2,
-	effect: 'coverflow',
-	coverflowEffect: {
-        rotate: 50,
-        stretch: 0,
-        depth: 100,
-        modifier: 1,
-	autoplay: {delay: 2},
-        slideShadows: false,
-      },
-        pagination: {
-        
-            el: '.swiper-pagination',
-            clickable: true,
-        }
-
-
-
-    });
+    }
         
         function setCookie(name, value, seconds) {
             var expires = "";
