--- a/premio_cms/templates/promotions-carousel.html
+++ b/premio_cms/templates/promotions-carousel.html
@@ -1,6 +1,6 @@
 {% load wagtailcore_tags wagtailimages_tags %}
 
-    <div class="swiper-slide promotion-slide">
+    <div class="swiper-slide promo-card">
         <a href="{% pageurl page %}">
            <div class="card shadow-lg" style="width: 100%;">
              {% with page.main_image as main_image %}
