--- a/premio_cms/templates/promotions-carousel.html
+++ b/premio_cms/templates/promotions-carousel.html
@@ -4,11 +4,10 @@
         <a href="{% pageurl page %}">
            <div class="card shadow-lg" style="width: 100%;">
              {% with page.main_image as main_image %}
-             {% if main_image %}{% image main_image fill-1000x1000-c100 class="card-img-top" %}{% endif %}
+             {% if main_image %}{% image main_image fill-1000x700-c100 class="card-img-top" %}{% endif %}
              {% endwith %}
-             <div class="card-body">
+             <div class="card-body" style="height: 15vh;">
                <h5 class="card-title">{{ page.title }}</h5>
-               <p class="card-text">{{ page.body|richtext }} </p>
                <a href="{% pageurl page %}" class="btn btn-primary mt-2">Learn more</a>
              </div>
            </div>
