--- a/locations/templates/locations/locations_index_page.html
+++ b/locations/templates/locations/locations_index_page.html
@@ -10,7 +10,7 @@
 </div>
 <template id='mobile-content'>
     <div class="placeholder-div mt-4"></div>
-    <div class="content-title-holder">
+    <div class="content-title-holder mt-2">
        <h2 class="ml-4">Promotions</h2>
 	<!-- replace w/ static file later -->
     </div>
