--- a/premio_cms/static/css/premio_cms.css
+++ b/premio_cms/static/css/premio_cms.css
@@ -168,25 +168,42 @@ transform: none;
 	}
 
 	.index-pg-content {
-width: 100vw
+               width: 80vw;
 	       display: flex;
-       justify-content: start;
-       align-items: center;
-       flex-wrap: wrap;
+               justify-content: start;
+               align-items: center;
+               flex-wrap: wrap;
 
 	}
 
 
 	.index-pg-content>*{
 flex:0 50%;
+        margin-top: 30px;
 	}
 
-	tag-img {
-width: 50%;
-
+	.tag-img {
+width: 100%;
+height: 100%;
 	}
 
+.page-container {
 
+width: 100vw;
+display: flex;
+flex-direction: column;
+justify-content: start;
+align-items: center;
+
+}
+
+
+
+.tags-index-back-bar {
+
+    width: 100vw;
+
+}
 
 }
 
@@ -347,7 +364,7 @@ swiper-promotions-container {
 }
 
 .index-pg-content {
-    width: 100vw
+    width: 80vw;
     display: flex;
     justify-content: start;
     align-items: center;
@@ -360,9 +377,25 @@ swiper-promotions-container {
     flex:0 50%;
 }
 
-tag-img {
-    width: 50%;
+.tag-img {
+    width: 85%;
+    height: 85%;
 
 }
 
 
+.page-container {
+
+width: 100vw;
+display: flex;
+flex-direction: column;
+justify-content: start;
+align-items: center;
+
+}
+
+.tags-index-back-bar {
+
+    width: 100vw;
+
+}
