--- a/premio_cms/static/css/premio_cms.css
+++ b/premio_cms/static/css/premio_cms.css
@@ -399,3 +399,38 @@ align-items: center;
     width: 100vw;
 
 }
+
+
+.desktop-location-page-img {
+    
+    width: 100vw;
+    height: 35vh;
+    object-fit: cover;
+
+}
+.title-caption {
+    position: fixed;
+    top: 200px;
+    left: 30px;
+    z-index: 1000;
+    color: white;
+}
+
+.body-caption {
+    top: 260px;
+}
+
+.desktop-mapview {
+    width: 100vw;
+    height: 40vh;
+}
+
+.tags-holder {
+    width: 100vw;
+}
+
+.tags-row {
+    width: 15vw;
+
+
+}
