desktop view for location page tags updated

--- a/premio_cms/static/css/premio_cms.css
+++ b/premio_cms/static/css/premio_cms.css
@@ -434,3 +434,14 @@ align-items: center;
 
 
 }
+
+.tags-card {
+    width: 25vw;
+}
+
+.desktop-location-nav {
+    width: 100vw;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
