--- a/locations/templates/locations/location_page.html
+++ b/locations/templates/locations/location_page.html
@@ -62,7 +62,7 @@
        {% endif %}
     </template>
     <template id="desktop-content">
-                        <div class="desktop-location-nac mt-3 mb-3">
+                        <div class="mt-3 mb-3">
                             <a href="{{ page.get_parent.url }}">
                                 <img class="ml-3" src="https://img.icons8.com/android/96/000000/back.png" width="30px" height="30px"/>
                             </a>
