--- a/locations/templates/locations/location_tag_index_page.html
+++ b/locations/templates/locations/location_tag_index_page.html
@@ -1,26 +1,61 @@
 {% extends "base.html" %}
-
 {% load wagtailcore_tags wagtailimages_tags %}
-
 {% block content %}
 <div class="page-container">
-    {% if request.GET.tag|length %}
-    <div class="tags-index-back-bar mt-2 d-flex justify-content-start align-items-center">
-        <a href="{{ page.get_parent.url }}">
-            <img src="https://img.icons8.com/android/96/000000/back.png" width="30px" height="30px"/>
-        </a>
-        <h5 class="mt-2 ml-4">{{ request.GET.tag }}</h5>
-    </div>
-    {% endif %}
-
-    <div class="mt-4 index-pg-content">
-        {% for page in locationpages %}
-            {% include "tags_page_item.html" with page=page.specific %}
-        {% empty %}
-            <div class="col">
-                 No pages found with that tag.
+    <template id="mobile-content">
+        <div class="page-container">
+            {% if request.GET.tag|length %}
+            <div class="tags-index-back-bar mt-2 d-flex justify-content-start align-items-center">
+                <a href="{{ page.get_parent.url }}">
+                    <img src="https://img.icons8.com/android/96/000000/back.png" width="30px" height="30px"/>
+                </a>
+                <h5 class="mt-2 ml-4">{{ request.GET.tag }}</h5>
             </div>
+            {% endif %}
+
+            <div class="mt-4 index-pg-content">
+                {% for page in locationpages %}
+                    {% include "tags_page_item.html" with page=page.specific %}
+                {% empty %}
+                    <div class="col">
+                         No pages found with that tag.
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+    </template>
+    <template id="desktop-content">
+
+
+        {% if request.GET.tag|length %}
+            <div class="desktop-location-nav mt-3 mb-3">
+                <a href="{{ page.get_parent.url }}">
+                    <img class="ml-3" src="https://img.icons8.com/android/96/000000/back.png" width="30px" height="30px"/>
+                </a>
+                <h5 class="mt-2 ml-4">{{ request.GET.tag }}</h5>
+            </div>
+        {% endif %}
+
+        {% for page in locationpages %}
+            {% include "desktop_tags_page_card.html" with page=page.specific %}
+            {% empty %}
+                <div class="col">
+                    No pages found with that tag.
+                </div>
         {% endfor %}
-    </div>
+    </template>
 </div>
+<script>
+var pageContentShown=document.querySelector(".page-container");
+const isMobile = matchMedia('(max-device-width: 844px)').matches;
+if(isMobile === true) {
+    var mobileTemplate = document.querySelector("#mobile-content");
+    var clone = mobileTemplate.content.cloneNode(true);
+    pageContentShown.appendChild(clone);
+} else {
+    var desktopTemplate=document.querySelector("#desktop-content");
+    var clone=desktopTemplate.content.cloneNode(true);
+    pageContentShown.appendChild(clone);
+}
+</script>
 {% endblock %}
