--- a/premio_cms/templates/desktop_tags_page_card.html
+++ b/premio_cms/templates/desktop_tags_page_card.html
@@ -1,5 +1,5 @@
 {% load wagtailcore_tags wagtailimages_tags %}
-    <div class="card tags-card" data-tilt data-tilt-scale="1.02" data-tilt-glare data-tilt-max-glare="0.2">
+    <div class="card tags-card glass-body" data-tilt data-tilt-scale="1.02" data-tilt-glare data-tilt-max-glare="0.2">
         <a href="{% pageurl page %}">
             {% with page.main_image as main_image %}
             {% if main_image %}{% image main_image fill-500x250-c100 class="card-img-top" %}{% endif %}
