--- a/premio_cms/templates/location_card_desktop.html
+++ b/premio_cms/templates/location_card_desktop.html
@@ -1,6 +1,6 @@
 {% load wagtailcore_tags wagtailimages_tags %}
     <div class="swiper-slide">
-        <div class="card" data-tilt data-tilt-scale="1.02" data-tilt-glare data-tilt-max-glare="0.2">
+        <div class="card glass-body" data-tilt data-tilt-scale="1.02" data-tilt-glare data-tilt-max-glare="0.2">
             <a href="{% pageurl page %}">
                 {% with page.main_image as main_image %}
                 {% if main_image %}{% image main_image fill-500x250-c100 class="card-img-top" %}{% endif %}
@@ -8,7 +8,7 @@
             </a>
              <div class="card-body" style="height: 15vh;">
                <h5 class="card-title">{{ page.title }}</h5>
-               <a href="{% pageurl page %}" class="btn btn-primary mt-2">Learn more</a>
+               <a href="{% pageurl page %}" class="btn btn-primary mt-1">Learn more</a>
              </div>
         </div>
     </div>
