--- a/locations/templates/locations/locations_index_page.html
+++ b/locations/templates/locations/locations_index_page.html
@@ -9,7 +9,9 @@
 <!-- one of the templates will get rendered here depending on what the client device is -->
 </div>
 <template id='mobile-content'>
-    <div class="placeholder-div mt-4"></div>
+   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+  <path fill="#007BFF" fill-opacity="1" d="M0,192L48,197.3C96,203,192,213,288,229.3C384,245,480,267,576,234.7C672,203,768,117,864,74.7C960,32,1056,32,1152,26.7C1248,21,1344,11,1392,5.3L1440,0L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
+</svg> 
     <div class="content-title-holder mt-2">
        <h2 class="ml-4">Promotions</h2>
 	<!-- replace w/ static file later -->
@@ -24,7 +26,9 @@
             {% endfor %}
         </div>
     </div>
-    <div class="placeholder-div mt-4"></div>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+  <path fill="#007BFF" fill-opacity="1" d="M0,64L48,64C96,64,192,64,288,64C384,64,480,64,576,58.7C672,53,768,43,864,48C960,53,1056,75,1152,96C1248,117,1344,139,1392,149.3L1440,160L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
+    </svg> 
     {% endif %}
 
     {% for tag, pages in locationpagetags.items %}
@@ -40,7 +44,9 @@
 			{% endfor %}
                 </div>
         </div>
-         <div class="placeholder-div mt-4"></div>
+        <svg  class="mt-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+  <path fill="#007BFF" fill-opacity="1" d="M0,64L48,64C96,64,192,64,288,64C384,64,480,64,576,58.7C672,53,768,43,864,48C960,53,1056,75,1152,96C1248,117,1344,139,1392,149.3L1440,160L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
+        </svg>
         {% endif %}
     {% endfor %}
     {% if locationsnearme %}
@@ -59,6 +65,9 @@
 </template>
 
 <template id='desktop-content'>
+   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+  <path fill="#007BFF" fill-opacity="1" d="M0,192L48,197.3C96,203,192,213,288,229.3C384,245,480,267,576,234.7C672,203,768,117,864,74.7C960,32,1056,32,1152,26.7C1248,21,1344,11,1392,5.3L1440,0L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
+</svg> 
     <div class="content-title-holder">
        <h2 class="ml-4 mt-4">Promotions</h2>
     </div>
