--- a/locations/templates/locations/locations_index_page.html
+++ b/locations/templates/locations/locations_index_page.html
@@ -12,6 +12,10 @@
    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
   <path fill="#007BFF" fill-opacity="1" d="M0,192L48,197.3C96,203,192,213,288,229.3C384,245,480,267,576,234.7C672,203,768,117,864,74.7C960,32,1056,32,1152,26.7C1248,21,1344,11,1392,5.3L1440,0L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
 </svg> 
+   <svg class="top-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+  <path fill="#2a8bf5" fill-opacity="1" d="M0,192L48,197.3C96,203,192,213,288,229.3C384,245,480,267,576,234.7C672,203,768,117,864,74.7C960,32,1056,32,1152,26.7C1248,21,1344,11,1392,5.3L1440,0L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
+</svg> 
+<div class="promotions-holder">
     <div class="content-title-holder mt-2">
        <h2 class="ml-4">Promotions</h2>
 	<!-- replace w/ static file later -->
@@ -26,27 +30,42 @@
             {% endfor %}
         </div>
     </div>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+</div>
+<div class="locations-index-pg-bottom">
+    <svg class="bottom-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
   <path fill="#007BFF" fill-opacity="1" d="M0,64L48,64C96,64,192,64,288,64C384,64,480,64,576,58.7C672,53,768,43,864,48C960,53,1056,75,1152,96C1248,117,1344,139,1392,149.3L1440,160L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
     </svg> 
+    <svg  class="top-svg top-svg-tags" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+  <path fill="#2a8bf5" fill-opacity="1" d="M0,64L48,64C96,64,192,64,288,64C384,64,480,64,576,58.7C672,53,768,43,864,48C960,53,1056,75,1152,96C1248,117,1344,139,1392,149.3L1440,160L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
+    </svg>
     {% endif %}
 
     {% for tag, pages in locationpagetags.items %}
         {% if pages.count %}
-        <div class="content-title-holder anm fdu">
-            <h2 class="ml-4">{{ tag | title }}</h2>
-            <a class="a-color" href="{% slugurl 'tags' %}?tag={{ tag }}"><p class="mr-3  mt-3">See all</p></a>
-        </div>
-	<div class="swiper-container">
-		<div class="swiper-wrapper">
-			{% for child in pages %}
-				{% include "location_preview.html" with page=child.specific %}
-			{% endfor %}
-                </div>
-        </div>
-        <svg  class="mt-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-  <path fill="#007BFF" fill-opacity="1" d="M0,64L48,64C96,64,192,64,288,64C384,64,480,64,576,58.7C672,53,768,43,864,48C960,53,1056,75,1152,96C1248,117,1344,139,1392,149.3L1440,160L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
-        </svg>
+            <div class="item-container-holder">
+
+		<div class="content-title-holder anm fdu">
+		    <h2 class="ml-4">{{ tag | title }}</h2>
+		    <a class="a-color" href="{% slugurl 'tags' %}?tag={{ tag }}"><p class="mr-3  mt-3">See all</p></a>
+		</div>
+		<div class="swiper-container">
+			<div class="swiper-wrapper">
+				{% for child in pages %}
+					{% include "location_preview.html" with page=child.specific %}
+				{% endfor %}
+			</div>
+		</div>
+            </div>
+	    <div class="svg-content-holder">
+
+
+            </div>
+		<svg  class="mt-3 bottom-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+	  <path fill="#007BFF" fill-opacity="1" d="M0,64L48,64C96,64,192,64,288,64C384,64,480,64,576,58.7C672,53,768,43,864,48C960,53,1056,75,1152,96C1248,117,1344,139,1392,149.3L1440,160L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
+		</svg>
+		<svg  class="top-svg top-svg-tags" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+	  <path fill="#2a8bf5" fill-opacity="1" d="M0,64L48,64C96,64,192,64,288,64C384,64,480,64,576,58.7C672,53,768,43,864,48C960,53,1056,75,1152,96C1248,117,1344,139,1392,149.3L1440,160L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
+		</svg>
         {% endif %}
     {% endfor %}
     {% if locationsnearme %}
@@ -62,6 +81,7 @@
         </div>
     </div>
     {% endif %}
+</div>
 </template>
 
 <template id='desktop-content'>
