--- a/locations/templates/locations/locations_index_page.html
+++ b/locations/templates/locations/locations_index_page.html
@@ -69,53 +69,60 @@
         {% endif %}
     {% endfor %}
     {% if locationsnearme %}
-    <div class="content-title-holder">
-        <h2 class="ml-4">Near Me</h2>
-	<!-- replace w/ static file later -->
-    </div>
-    <div class="swiper-container">
-        <div class="swiper-wrapper">
-            {% for page in locationsnearme %}
-                {% include "location_preview.html" with page=page.specific %}
-            {% endfor %}
-        </div>
+    <div class="item-container-holder">
+	    <div class="content-title-holder">
+		<h2 class="ml-4">Near Me</h2>
+		<!-- replace w/ static file later -->
+	    </div>
+	    <div class="swiper-container">
+		<div class="swiper-wrapper">
+		    {% for page in locationsnearme %}
+			{% include "location_preview.html" with page=page.specific %}
+		    {% endfor %}
+		</div>
+	    </div>
     </div>
     {% endif %}
 </div>
 </template>
 
 <template id='desktop-content'>
-   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-  <path fill="#007BFF" fill-opacity="1" d="M0,192L48,197.3C96,203,192,213,288,229.3C384,245,480,267,576,234.7C672,203,768,117,864,74.7C960,32,1056,32,1152,26.7C1248,21,1344,11,1392,5.3L1440,0L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
-</svg> 
-    <div class="content-title-holder">
-       <h2 class="ml-4 mt-4">Promotions</h2>
-    </div>
-    {% if page.promoted_pages.count %}
-    <div class="swiper-promotions-desktop mt-5 ml-4">
-        <div class="swiper-wrapper"> 
-            {% for i,p in indexed_promoted_pages %}
-                {% with p.promoted_page.specific as promoted_page %}	
-		    {% include "location_card_desktop.html" with page=promoted_page %}
-                {% endwith %}
-            {% endfor %}
+	<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+	  <path fill="#007BFF" fill-opacity="1" d="M0,32L120,37.3C240,43,480,53,720,48C960,43,1200,21,1320,10.7L1440,0L1440,0L1320,0C1200,0,960,0,720,0C480,0,240,0,120,0L0,0Z"></path>
+	</svg>
+	<svg class="top-svg-desktop" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+	  <path fill="#2a8bf5" fill-opacity="1" d="M0,32L120,37.3C240,43,480,53,720,48C960,43,1200,21,1320,10.7L1440,0L1440,0L1320,0C1200,0,960,0,720,0C480,0,240,0,120,0L0,0Z"></path>
+	</svg>
+        <div class="desktop-locations-holder">
+	    <div class="content-title-holder">
+	       <h2 class="ml-4 mt-4">Promotions</h2>
+	    </div>
+	    {% if page.promoted_pages.count %}
+	    <div class="swiper-promotions-desktop mt-5 ml-4">
+		<div class="swiper-wrapper"> 
+		    {% for i,p in indexed_promoted_pages %}
+			{% with p.promoted_page.specific as promoted_page %}	
+			    {% include "location_card_desktop.html" with page=promoted_page %}
+			{% endwith %}
+		    {% endfor %}
+		</div>
+	    </div>
+	   {% endif %}
+	   {% for tag, pages in locationpagetags.items %}
+	       {% if pages.count %}
+	       <div class="content-title-holder mt-5">
+		   <h2 class="ml-4 mt-4">{{ tag | title }}</h2>
+	       </div>
+	       <div class="swiper-promotions-desktop mt-5 ml-4">
+		<div class="swiper-wrapper">
+			{% for child in pages %}
+				{% include "location_card_desktop.html" with page=child.specific %}
+			{% endfor %}
+		       </div>
+	       </div>
+	       {% endif %}
+	   {% endfor %}
         </div>
-    </div>
-   {% endif %}
-   {% for tag, pages in locationpagetags.items %}
-       {% if pages.count %}
-       <div class="content-title-holder">
-           <h2 class="ml-4 mt-4">{{ tag | title }}</h2>
-       </div>
-       <div class="swiper-promotions-desktop mt-5 ml-4">
-       	<div class="swiper-wrapper">
-       		{% for child in pages %}
-       			{% include "location_card_desktop.html" with page=child.specific %}
-       		{% endfor %}
-               </div>
-       </div>
-       {% endif %}
-   {% endfor %}
 </template>
     <script>
 
