--- a/premio_cms/static/css/premio_cms.css
+++ b/premio_cms/static/css/premio_cms.css
@@ -407,3 +407,17 @@ border-radius:10px
 h1,h2,h3,h4,h5,h6,p {
 font-family: 'Spartan', sans-serif;
 }
+
+.desktop-locations-holder {
+position: relative;
+top: -380px;
+}
+a {
+font-family: 'Spartan', sans-serif;
+}
+
+.top-svg-desktop {
+position:relative;
+z-index:100000;
+top: -270px;
+}
