added lazy loading for desktop-card images

--- a/locations/templates/locations/locations_index_page.html
+++ b/locations/templates/locations/locations_index_page.html
@@ -248,6 +248,9 @@
                 console.error('geolocation not supported');
             }
         }
+
+        const observer=lozad(".lazy");
+        observer.observe();
     </script>
 
 {% endblock %}
