--- a/premio_cms/templates/location_card_desktop.html
+++ b/premio_cms/templates/location_card_desktop.html
@@ -1,9 +1,9 @@
-{% load wagtailcore_tags wagtailimages_tags %}
+{% load wagtailcore_tags wagtailimages_tags lazyimages_tags%}
     <div class="swiper-slide">
         <div class="card glass-body" data-tilt data-tilt-scale="1.02" data-tilt-glare data-tilt-max-glare="0.2">
             <a href="{% pageurl page %}">
                 {% with page.main_image as main_image %}
-                {% if main_image %}{% image main_image fill-500x250-c100 class="card-img-top" %}{% endif %}
+                {% if main_image %}{% lazy_image main_image fill-500x250-c100 class="card-img-top lazy" %}{% endif %}
                 {% endwith %}
             </a>
              <div class="card-body" style="height: 15vh;">
