--- a/locations/templates/locations/location_tag_index_page.html
+++ b/locations/templates/locations/location_tag_index_page.html
@@ -12,7 +12,6 @@
                 <h5 class="mt-2 ml-4">{{ request.GET.tag }}</h5>
             </div>
             {% endif %}
-
             <div class="mt-5 index-pg-content anm fdu">
                 {% for page in locationpages %}
                     {% include "tags_page_item.html" with page=page.specific %}
@@ -58,5 +57,7 @@ if(isMobile === true) {
     var clone=desktopTemplate.content.cloneNode(true);
     pageContentShown.appendChild(clone);
 }
+const observer=lozad(".lazy");
+observer.observe();
 </script>
 {% endblock %}
