--- a/premio_cms/templates/location_preview.html
+++ b/premio_cms/templates/location_preview.html
@@ -1,8 +1,8 @@
-{% load wagtailcore_tags wagtailimages_tags %}
+{% load wagtailcore_tags wagtailimages_tags lazyimages_tags %}
     <div class="swiper-slide">
             <a href="{% pageurl page %}">
                 {% with page.main_image as main_image %}
-                {% if main_image %}{% image main_image fill-600x600-c100 class="card-img-top rounded-corners" %}{% endif %}
+                {% if main_image %}{% lazy_image main_image fill-600x600-c100 class="card-img-top rounded-corners lazy" %}{% endif %}
                 {% endwith %}
             </a>
     </div>
