--- a/premio_cms/templates/promotions-carousel.html
+++ b/premio_cms/templates/promotions-carousel.html
@@ -1,10 +1,10 @@
-{% load wagtailcore_tags wagtailimages_tags %}
+{% load wagtailcore_tags wagtailimages_tags lazyimages_tags %}
 {% with p.promoted_page.specific as promoted_page %}	
     <div class="swiper-slide promo-card">
         <a href="{% pageurl promoted_page %}">
            <div class="card shadow-lg" style="width: 100%;">
              {% with promoted_page.main_image as main_image %}
-             {% if main_image %}{% image main_image fill-748x380-c100 class="card-img-top" %}{% endif %}
+             {% if main_image %}{% lazy_image main_image fill-748x380-c100 class="card-img-top lazy" %}{% endif %}
              {% endwith %}
              <div class="card-body" style="height: 15vh;">
                <h5 class="card-title">{{ promoted_page.title }}</h5>
@@ -12,7 +12,6 @@
              </div>
            </div>
         </a>
-
              <div class="bg-primary caption-banner">
                  <p style="color: white;">{{ p.caption }}</p>
              </div>
