--- a/premio_cms/templates/location_card_desktop.html
+++ b/premio_cms/templates/location_card_desktop.html
@@ -8,7 +8,7 @@
             </a>
              <div class="card-body" style="height: 15vh;">
                <h5 class="card-title">{{ page.title }}</h5>
-               <a href="{% pageurl page %}" class="btn btn-primary mt-1">Learn more</a>
+              <button class="color-fluid" ><a href="{% pageurl page %}" class="mt-1 white-text">Learn more</a></button> 
              </div>
         </div>
     </div>
