--- a/locations/templates/locations/locations_index_page.html
+++ b/locations/templates/locations/locations_index_page.html
@@ -5,15 +5,31 @@
 {% block body_class %}template-locationsindexpage{% endblock %}
 
 {% block content %}
+<style>
+.color-fluid {
+background-color:{{ page.page_theme_color }};
+border-radius: 10%;
+border: none;
+}
+.white-text{
+text-decoration: none;
+font-color: white;
+}
+a,a:hover{
+text-decoration: none;
+color: white;
+}
+</style>
+
 <div class="page-content-shown">
 <!-- one of the templates will get rendered here depending on what the client device is -->
 </div>
 <template id='mobile-content'>
-   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+   <svg class="color-fluid" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
   <path fill="{{ page.page_theme_color }}" fill-opacity="1" d="M0,192L48,197.3C96,203,192,213,288,229.3C384,245,480,267,576,234.7C672,203,768,117,864,74.7C960,32,1056,32,1152,26.7C1248,21,1344,11,1392,5.3L1440,0L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
 </svg> 
    <svg class="top-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-  <path fill="#FFFFFF" fill-opacity="0.25" d="M0,192L48,197.3C96,203,192,213,288,229.3C384,245,480,267,576,234.7C672,203,768,117,864,74.7C960,32,1056,32,1152,26.7C1248,21,1344,11,1392,5.3L1440,0L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
+  <path fill="#FFFFFF" fill-opacity="0.1" d="M0,192L48,197.3C96,203,192,213,288,229.3C384,245,480,267,576,234.7C672,203,768,117,864,74.7C960,32,1056,32,1152,26.7C1248,21,1344,11,1392,5.3L1440,0L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
 </svg> 
 <div class="promotions-holder">
     <div class="content-title-holder mt-2">
@@ -36,7 +52,7 @@
   <path fill="{{ page.page_theme_color }}" fill-opacity="1" d="M0,64L48,64C96,64,192,64,288,64C384,64,480,64,576,58.7C672,53,768,43,864,48C960,53,1056,75,1152,96C1248,117,1344,139,1392,149.3L1440,160L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
     </svg> 
     <svg  class="top-svg top-svg-tags" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-  <path fill="#FFFFFF" fill-opacity="0.25" d="M0,64L48,64C96,64,192,64,288,64C384,64,480,64,576,58.7C672,53,768,43,864,48C960,53,1056,75,1152,96C1248,117,1344,139,1392,149.3L1440,160L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
+  <path fill="#FFFFFF" fill-opacity="0.1" d="M0,64L48,64C96,64,192,64,288,64C384,64,480,64,576,58.7C672,53,768,43,864,48C960,53,1056,75,1152,96C1248,117,1344,139,1392,149.3L1440,160L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
     </svg>
     {% endif %}
 
@@ -64,7 +80,7 @@
 	  <path fill="{{ page.page_theme_color }}" fill-opacity="1" d="M0,64L48,64C96,64,192,64,288,64C384,64,480,64,576,58.7C672,53,768,43,864,48C960,53,1056,75,1152,96C1248,117,1344,139,1392,149.3L1440,160L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
 		</svg>
 		<svg  class="top-svg top-svg-tags" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-	  <path fill="#FFFFFF" fill-opacity="0.25" d="M0,64L48,64C96,64,192,64,288,64C384,64,480,64,576,58.7C672,53,768,43,864,48C960,53,1056,75,1152,96C1248,117,1344,139,1392,149.3L1440,160L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
+	  <path fill="#FFFFFF" fill-opacity="0.1" d="M0,64L48,64C96,64,192,64,288,64C384,64,480,64,576,58.7C672,53,768,43,864,48C960,53,1056,75,1152,96C1248,117,1344,139,1392,149.3L1440,160L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
 		</svg>
         {% endif %}
     {% endfor %}
@@ -91,7 +107,7 @@
 	  <path fill="{{ page.page_theme_color }}" fill-opacity="1" d="M0,32L120,37.3C240,43,480,53,720,48C960,43,1200,21,1320,10.7L1440,0L1440,0L1320,0C1200,0,960,0,720,0C480,0,240,0,120,0L0,0Z"></path>
 	</svg>
 	<svg class="top-svg-desktop" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-	  <path fill="#FFFFFF" fill-opacity="0.25" d="M0,32L120,37.3C240,43,480,53,720,48C960,43,1200,21,1320,10.7L1440,0L1440,0L1320,0C1200,0,960,0,720,0C480,0,240,0,120,0L0,0Z"></path>
+	  <path fill="#FFFFFF" fill-opacity="0.1" d="M0,32L120,37.3C240,43,480,53,720,48C960,43,1200,21,1320,10.7L1440,0L1440,0L1320,0C1200,0,960,0,720,0C480,0,240,0,120,0L0,0Z"></path>
 	</svg>
         <div class="desktop-locations-holder">
 	    <div class="content-title-holder">
