mobile dynamic styling

--- a/premio_cms/templates/promotions-carousel.html
+++ b/premio_cms/templates/promotions-carousel.html
@@ -8,11 +8,11 @@
              {% endwith %}
              <div class="card-body" style="height: 15vh;">
                <h5 class="card-title">{{ promoted_page.title }}</h5>
-               <a href="{% pageurl promoted_page %}" class="btn btn-primary mt-2">Learn more</a>
+               <button class="color-fluid"><a href="{% pageurl promoted_page %}" class="mt-2">Learn more</a></button>
              </div>
            </div>
         </a>
-             <div class="bg-primary caption-banner">
+             <div class="caption-banner">
                  <p style="color: white;">{{ p.caption }}</p>
              </div>
     </div>
