--- a/locations/templates/locations/locations_index_page.html
+++ b/locations/templates/locations/locations_index_page.html
@@ -19,13 +19,16 @@ a,a:hover{
 text-decoration: none;
 color: white;
 }
+.caption-banner {
+background-color:{{ page.page_theme_color }};
+}
 </style>
 
 <div class="page-content-shown">
 <!-- one of the templates will get rendered here depending on what the client device is -->
 </div>
 <template id='mobile-content'>
-   <svg class="color-fluid" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
   <path fill="{{ page.page_theme_color }}" fill-opacity="1" d="M0,192L48,197.3C96,203,192,213,288,229.3C384,245,480,267,576,234.7C672,203,768,117,864,74.7C960,32,1056,32,1152,26.7C1248,21,1344,11,1392,5.3L1440,0L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
 </svg> 
    <svg class="top-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -59,7 +62,6 @@ color: white;
     {% for tag, pages in locationpagetags.items %}
         {% if pages.count %}
             <div class="item-container-holder">
-
 		<div class="content-title-holder anm fdu">
 		    <h2 class="ml-4">{{ tag | title }}</h2>
 		    <a class="a-color" href="{% slugurl 'tags' %}?tag={{ tag }}"><p class="mr-3  mt-3">See all</p></a>
