--- a/premio_cms/templates/location_card_desktop.html
+++ b/premio_cms/templates/location_card_desktop.html
@@ -6,7 +6,7 @@
                 {% if main_image %}{% lazy_image main_image fill-500x250-c100 class="card-img-top lazy" %}{% endif %}
                 {% endwith %}
             </a>
-             <div class="card-body" style="height: 15vh;">
+             <div class="card-body card-color" style="height: 15vh;">
                <h5 class="card-title">{{ page.title }}</h5>
               <button class="color-fluid" ><a href="{% pageurl page %}" class="mt-1 white-text">Learn more</a></button> 
              </div>
